2012-09-06 Peter Spjuth   <peter.spjuth@gmail.com>
	* Added startXObject method, for creating Form XObjects.

2012-09-03 Peter Spjuth   <peter.spjuth@gmail.com>
	* Added embedFile method, splitting some functionality from attachFile.

2012-08-28 Peter Spjuth   <peter.spjuth@gmail.com>
	* Patch from Christian Gollwitzer:
	* Added attachFile method.
	* Fix a bug in string quoting, which causes Adobe Reader to misinterpret chars at special positions in the encoding (\r,\b...)
	* Add an interpretation for angled text on the canvas (8.6)
	* Fix a bug with the underline position on canvas

2012-06-12 Peter Spjuth   <peter.spjuth@gmail.com>
	* Bumped revision to 0.8

2012-03-31 Peter Spjuth   <peter.spjuth@gmail.com>
	* Bumped revision to 0.7.2

2012-03-31 Peter Spjuth   <peter.spjuth@gmail.com>
	* Fixed bug "that makes non-latin Italic TTF-fonts unusable".
	  (Yaroslav Schekin)

2012-03-22 Peter Spjuth   <peter.spjuth@gmail.com>
	* Added setLineWidth and setLineDash methods to replace setLineStyle.

2012-03-22 Peter Spjuth   <peter.spjuth@gmail.com>
	* Updated documentation contributed by Ian Gay.

2012-03-11 Peter Spjuth   <peter.spjuth@gmail.com>
	* Added argument checks to setLineStyle.

2012-02-17 Peter Spjuth   <peter.spjuth@gmail.com>
	* Added -fontmap to canvas dump to control fonts of text items.

2012-02-07 Peter Spjuth   <peter.spjuth@gmail.com>
	* Handle width in canvas dash patterns.

2012-02-07 Peter Spjuth   <peter.spjuth@gmail.com>
	* Bumped revision to 0.7.1

2012-02-07 Peter Spjuth   <peter.spjuth@gmail.com>
	* Support patterns for canvas dashes. (arjen) [Bug 18501]

2011-10-30 Peter Spjuth   <peter.spjuth@gmail.com>
	* Added a fudge factor to text placement from canvas to get a nicer
	  result.

2011-10-05 Peter Spjuth   <peter.spjuth@gmail.com>
	* Cleaned up to name ascend/descend font metrics consistently.
	* Text from canvas was displaced one line due to a incorrect
	  cleanup 2010-01 (auriocus) [Bug 18361]
